freelancer-k8s/minikube/freelancer-kibana/kibana.yaml
# l. 308 b
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f-kibana
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: f-kibana
  template:
    metadata:
      labels:
        app: f-kibana
    spec:
      containers:
        - name: f-kibana
          image: docker.elastic.co/kibana/kibana:8.13.0
          resources:
            limits:
              memory: "1Gi"
              cpu: "1500m"
            requests:
              cpu: 250m
              memory: 1Gi
          ports:
            - name: f-kibana
              containerPort: 5601
          # ...
          volumeMounts:
            - name: kibana-config
              mountPath: /usr/share/kibana/config
      volumes:
        - name: kibana-config
          configMap:
            name: kibana-config
