freelancer-k8s/minikube/freelancer-kibana/service.yaml
# l. 308 a
apiVersion: v1
kind: Service
metadata:
  name: f-kibana
  namespace: production
spec:
  type: ClusterIP
  selector:
    app: f-kibana
  ports:
    - name: f-kibana
      port: 5601
      targetPort: 5601
      protocol: TCP
