freelancer-k8s/minikube/freelancer-kibana/ingress.yaml
# l. 324
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ingress
  namespace: production
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: kibana.freelancer-app.ovh
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: f-kibana
                port:
                  number: 5601
